<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_margin"
    tools:context=".AddContactActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutCell"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEdtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginTop="@dimen/items_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEdtCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radioPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/items_margin"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutCell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutComplement"
        >
        <RadioButton
            android:id="@+id/radioPersonal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:checked="true"
            android:text="@string/personal"/>
        <RadioButton
            android:id="@+id/radioWork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/work"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutComplement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/items_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearBtn"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEdtComplement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/items_margin"
        android:layout_marginBottom="@dimen/items_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutComplement"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>